--- a/boilerplate.css
+++ b/boilerplate.css
@@ -56,8 +56,11 @@ body { margin: 0; font-size: 1em; line-height: 1.4; }
    ========================================================================== */
 
 a { color: #00e; }
-a:visited { color: #551a8b; }
-a:hover { color: #06e; }
+a:visited {
+}
+a:hover {
+	color: #7BB648;
+}
 a:focus { outline: thin dotted; }
 
 /* Improve readability when focused and hovered in all browsers: h5bp.com/h */
